--- a/EDA_Hotel_Bookings_Capstone_Project_.ipynb
+++ b/EDA_Hotel_Bookings_Capstone_Project_.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "16KSs-NpuIzwEbt4BiDjppazwgxlUMzwm",
-      "authorship_tag": "ABX9TyN0h7+hiLlyi2/uwqVNAO5l",
+      "authorship_tag": "ABX9TyOgBXP6/QCAZd5KiGGTTHy0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,7 +74,7 @@
       "metadata": {
         "id": "fx5VO8Y-dQoE"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -99,7 +99,7 @@
       "metadata": {
         "id": "yaSFn4nufrGr"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -124,7 +124,7 @@
         "id": "MShW9p-FYijr",
         "outputId": "09809ceb-b6ce-4e28-de5e-f516088b2fb7"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -149,7 +149,7 @@
         "id": "3YAmArbSiGu7",
         "outputId": "3210d24e-d414-4da1-9e57-e7b9830dfe10"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -552,7 +552,7 @@
         "id": "gHGKannbjb_E",
         "outputId": "9d21241b-e122-48a4-f117-b1ebbb8d55b4"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -946,7 +946,7 @@
         "id": "qEkx8-2mkOtk",
         "outputId": "9f9a6cd5-63ea-488d-be1a-69f2756f7be2"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1353,7 +1353,7 @@
         "id": "wbeSSimtkUFc",
         "outputId": "fc0b29c6-dd83-463b-bee4-17df8a53ef76"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1420,7 +1420,7 @@
         "\n",
         "2.Total of 32 columns.\n",
         "\n",
-        "3.There are Null values in four columns (children, countries, agent, company).\n"
+        "3.There are Null values in four columns which arenchildren, countries, agent, company.\n"
       ],
       "metadata": {
         "id": "NOxM8oimkaK7"
@@ -1519,7 +1519,7 @@
         },
         "outputId": "5ab277b8-bd2b-4609-b10e-1f8e347802dd"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1923,7 +1923,7 @@
         },
         "outputId": "05732e8c-ea19-49c4-d27f-f997d53e8e0c"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1957,7 +1957,7 @@
       "metadata": {
         "id": "yLkKOi_PB_QL"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2011,7 +2011,7 @@
         "id": "tarH12tADETa",
         "outputId": "b610f48f-5161-4bef-8f6a-2fae104b740a"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2094,7 +2094,7 @@
       "metadata": {
         "id": "lSx0v_XlErCD"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2105,7 +2105,7 @@
       "metadata": {
         "id": "D2V-aalYERkE"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2121,7 +2121,7 @@
         "id": "5eKcjTnQChrk",
         "outputId": "4869c73a-0928-4026-eef1-d96455e9ef7d"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2198,7 +2198,7 @@
         },
         "outputId": "c11a4b5a-74f0-474d-ef15-ed90dec1204a"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2241,7 +2241,7 @@
       "metadata": {
         "id": "ftN0Of4mJUXu"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2253,7 +2253,7 @@
       "metadata": {
         "id": "qb2yo4q4NOZy"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2277,7 +2277,7 @@
       "metadata": {
         "id": "ZSdS-KDFLUWt"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2289,13 +2289,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "f5qzzEdNw1rM",
         "outputId": "a15f935e-1917-4469-e105-383b108d4ff1"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2616,7 +2615,7 @@
         "id": "z8Zx1Qy7w7Me",
         "outputId": "9d13d386-0947-4f3d-ddcd-5d9ce17dfcb3"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2665,13 +2664,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "nAH1s07Owo0d",
         "outputId": "d4171d95-dde2-428d-8a7c-4a4fc5e9567c"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3660,13 +3658,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "RwXqYs94xF5c",
         "outputId": "b158c904-0d93-4bce-a38b-e5bfb4bb9e83"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3716,7 +3713,7 @@
         },
         "outputId": "18ac152a-b7e4-419e-fef0-660c628ff4ef"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3742,13 +3739,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "U1EOWGg8OpC8",
         "outputId": "0a298a2c-22a2-4736-a6bc-ed89717a21a4"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3798,12 +3794,11 @@
       "metadata": {
         "id": "j-KWgrOXUttr",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "859b7880-46dd-4236-ec44-3034df70eb86"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3997,12 +3992,11 @@
       "metadata": {
         "id": "67XQWtIzTPur",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "a6ac6ea4-b05e-45be-ae0b-103d3fab2874"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4050,7 +4044,7 @@
         "id": "ZCy4Xr7YoDXa",
         "outputId": "482ab5ee-d436-40f8-9aac-5deaa75a0a01"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4080,12 +4074,11 @@
       "metadata": {
         "id": "nlVscs4SlM1y",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "c1916448-f8a9-4e35-993f-8a4aeb731f5b"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4136,7 +4129,7 @@
         "id": "fczmGxfb13TJ",
         "outputId": "0a211e33-4b6c-4ec9-a97f-c1682fa2876e"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4175,13 +4168,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "TT6dJNHu3qDF",
         "outputId": "23d0a7ab-e1cd-4041-f7e2-232db4b7f4d5"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4229,7 +4221,7 @@
         "id": "32C_oHly44LW",
         "outputId": "08d726c3-15e1-4956-dcf8-8b51298d08d8"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4266,7 +4258,7 @@
         "id": "4ezzBD3O5AL1",
         "outputId": "135b6110-3045-40c0-b9ef-cd8748682e7b"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4320,7 +4312,7 @@
         "id": "_-QVLDSP5E09",
         "outputId": "1a6320f7-4804-44ed-d291-0d19b5a08e56"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4346,13 +4338,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "oU3QLYiD5Gb-",
         "outputId": "70a076f5-1d23-453c-bd4c-9629f9dd3b77"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4397,7 +4388,7 @@
         "id": "jd74zGBv6uXm",
         "outputId": "bc9da0b6-d400-4592-db8a-6be11f7e8a54"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4439,7 +4430,7 @@
         "id": "p4yLw9lm7IV1",
         "outputId": "19bc99bb-8ec5-4a66-dceb-46f014d58f53"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4490,7 +4481,7 @@
       "metadata": {
         "id": "scnvB7oWSJuk"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4502,13 +4493,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "_VayG4buSPK-",
         "outputId": "6f7193fc-a00f-43f5-da87-f03afdcb7ba9"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4653,13 +4643,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "0ksLXuxiSew7",
         "outputId": "67e8cc5b-75cd-4038-809e-42b50e6f3ee7"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4708,7 +4697,7 @@
         "id": "YT8Q0nr9TOTl",
         "outputId": "c83c8bf0-1675-4c3f-c102-dcb16099b247"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4738,13 +4727,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "uaeDLH5uUSsi",
         "outputId": "9a418320-b715-42f8-e502-75d668dfd11f"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4800,7 +4788,7 @@
         "id": "peUE1Jo2Uz9b",
         "outputId": "8450ae1a-e57a-49be-ed4c-beb369919292"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4832,13 +4820,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "fM_WQ_NMVpEC",
         "outputId": "600f8b55-df50-4636-d8d1-6996dcd8392b"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4886,7 +4873,7 @@
         "id": "g8bJUS5uZkkC",
         "outputId": "8a266c62-8799-4430-dc1e-fc1d66fa1233"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4912,13 +4899,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "6wOjnSaEZqKa",
         "outputId": "1f5b78a0-3ebb-43e5-82e3-d166d24d8238"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4950,13 +4936,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "_pEBTo5l_0Le",
         "outputId": "585e2410-ddf8-455e-d511-88f03e342b9d"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5372,13 +5357,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "YRHcdyjcwqOK",
         "outputId": "1b38e4ad-0b54-45f6-c645-408171a29a73"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5424,13 +5408,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "XyWnCa1RwU3d",
         "outputId": "d089d881-b7e3-43ab-9244-0076d64fcc4d"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5622,13 +5605,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "cZ8lhBO9wawk",
         "outputId": "4399dfd1-f4b3-458e-90b3-44db348c641d"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5675,7 +5657,7 @@
         "id": "GW_hmeij_5hZ",
         "outputId": "d36499b8-c60c-4b05-d34c-de192c1ea1ec"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5706,11 +5688,10 @@
         "id": "m_rsy0Thx08G",
         "outputId": "7014378a-2e43-4ca0-d0fe-53102a3e8fa5",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5753,7 +5734,7 @@
       "metadata": {
         "id": "3iP2q2zuV31u"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5765,13 +5746,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "Fs146YdyV2ud",
         "outputId": "8c138833-84ae-4d46-f99c-3f2f03f1081e"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5916,13 +5896,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "_c77wPiJWGnO",
         "outputId": "48d31705-7ca0-49bd-814c-e801bcf9ed22"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
